--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calculadora-antecipacao",
+  "name": "calculadora-modernizada",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -9,11 +9,7 @@
   "dependencies": {
     "next": "13.4.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.4.2",
-    "@types/react": "^18.2.6",
-    "typescript": "^5.0.4"
+    "react-dom": "18.2.0",
+    "lucide-react": "^0.270.0"
   }
 }
